# comfy_Pond_Nodes

./: README.md  __init__.py  pyproject.toml  requirements.txt
image/: Thumbs.db
nodes/: Audio_fps_frames.py  BatchWatermark.py  Batch_Loader.py  BodyPartSelector.py  Clothing_Selector.py  CropPaste.py  HDR.py  ImageAlignByMask.py  ImageBorder.py  ImagePad.py  InvertImage.py  LimbSelector.py  MaskBoolean.py  MaskComposite.py  MaskFeatherPercentage.py  MaskMerge.py  MaskRegionExpand.py  MaskRemove.py  MaskSizeAlign.py  MaskSwitch.py  MemoryManager.py  MetadataUtils.py  PoseSelector.py  Prompt.py  Prompt_manager.py  Prompt_managerV2.py  QwenPrompt.py  RealESRGANUpscaler.py  RealisticNoise.py  TextCleaner.py  VideoFrameExtractor.py  Wan22_Prompt.py  WanVideoReset.py  aged_damaged_effect.py  auto_censor.py  desaturate.py  hardware_monitor.py  image_filter.py  iphone.py  maskBbox.py  (+10 more)
web/js/: dynamic_outputs.js  hardware_monitor.js  math_tools.js  prompt_manager_enhanced_ui.js  prompt_manager_ui.js  whaleCover.js
workflows/: WAN2.2_API.json  图像去色.json  定位拼接.json  文件夹加载.json  自动局部打码.json  遮罩对齐.json  遮罩运算.json
