[project]
name = "comfy_Pond_Nodes"
description = "Comprehensive ComfyUI nodes for image processing, mask operations, YOLO detection, HDR effects, batch loading and more."
version = "1.0.7"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.22.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.5.0",
    "scipy>=1.8.0",
    "requests>=2.25.0",
    "psutil>=5.8.0"
]

[project.urls]
Repository = "https://github.com/Pondowner857/comfy_Pond_Nodes"
Documentation = "https://github.com/Pondowner857/comfy_Pond_Nodes#readme"
"Bug Tracker" = "https://github.com/Pondowner857/comfy_Pond_Nodes/issues"

[tool.comfy]
PublisherId = "pondowner857"
DisplayName = "Pond Nodes"
Icon = ""